Removed obsolete hgroup + Added header aside

--- a/src/index.html
+++ b/src/index.html
@@ -45,17 +45,14 @@
 
             <section>
                 <header>
-                    <hgroup>
-                        <h3>This is the second section of the article with Zurich and Munich</h3>
-                        <h4>This a less important title...</h4>
-                    </hgroup>
+                    <h3>This is the second section of the article with Zurich and Munich</h3>
                 </header>
 
                 <address>
                     <p>
                         This is
                         <a href="https://www.google.com/maps/place/Zurich">Zurich</a> and this is
-                        <a href="https://www.google.com/maps/place/Munich">Munich</a>.
+                        <a href="https://www.google.com/maps/place/Munich" target="_blank">Munich (open in a new tab)</a>.
                     </p>
 
                     <p>Contact me:</p>
@@ -90,6 +87,9 @@
     </main>
 
     <aside>
+        <header>
+            <h2>Useless sidebar</h2>
+        </header>
         <p>This is an useless paragraph</p>
     </aside>
 
