Added button to call an API + Changed dom for AJAX call

--- a/src/index.html
+++ b/src/index.html
@@ -78,19 +78,15 @@
             </section>
         </article>
 
-        <article>
-            <header>
-                <h2>Click the button below to load the second article by AJAX</h2>
-            </header>
-            <button>Click me</button>
-        </article>
+        <button>Click me to load the second article by AJAX</button>
+
     </main>
 
     <aside>
         <header>
             <h2>Useless sidebar</h2>
         </header>
-        <p>This is an useless paragraph</p>
+        <button>Secret button to a random API</button>
     </aside>
 
     <footer>
