Added lang + basic meta tags

--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <title>Baran Roman - Source Code Example</title>
+    <meta charset="UTF-8">
+    <meta name="description" content="An example page">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="author" content="Roman Baran">
+    <meta name="language" content="English">
+    <meta name="msthemecompatible" content="no">
 </head>
 
 <body>
