--- a/src/html/ajax.html
+++ b/src/html/ajax.html
@@ -1,30 +1,48 @@
-<table>
-    <thead>
-        <tr>
-            <th>Languages</th>
-            <th>Comprehension</th>
-            <th>Talking</th>
-            <th>Writing</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr>
-            <td>Italian</td>
-            <td>Advanced</td>
-            <td>Advanced</td>
-            <td>Advanced</td>
-        </tr>
-        <tr>
-            <td>English</td>
-            <td>Intermediate</td>
-            <td>Intermediate</td>
-            <td>Intermediate</td>
-        </tr>
-        <tr>
-            <td>Ukrainian</td>
-            <td>Advanced</td>
-            <td>Intermediate</td>
-            <td>Beginner</td>
-        </tr>
-    </tbody>
-</table>
+<article class="article">
+    <header>
+        <h2 class="article__title">This is an article</h2>
+    </header>
+
+    <section class="article__section cat-section">
+        <header>
+            <h3 class="cat-section__title">This is the first section of the article with cats</h3>
+        </header>
+
+        <table class="table">
+            <thead class="table__thead">
+                <tr class="table__tr">
+                    <th class="table__cell">Languages</th>
+                    <th class="table__cell">Comprehension</th>
+                    <th class="table__cell">Talking</th>
+                    <th class="table__cell">Writing</th>
+                </tr>
+            </thead>
+            <tbody class="table__tbody">
+                <tr class="table__tr">
+                    <td class="table__cell--language">Italian</td>
+                    <td class="table__cell">Advanced</td>
+                    <td class="table__cell">Advanced</td>
+                    <td class="table__cell">Advanced</td>
+                </tr>
+                <tr class="table__tr">
+                    <td class="table__cell--language">English</td>
+                    <td class="table__cell">Intermediate</td>
+                    <td class="table__cell">Intermediate</td>
+                    <td class="table__cell">Intermediate</td>
+                </tr>
+                <tr class="table__tr">
+                    <td class="table__cell--language">Ukrainian</td>
+                    <td class="table__cell">Advanced</td>
+                    <td class="table__cell">Intermediate</td>
+                    <td class="table__cell">Beginner</td>
+                </tr>
+                <tr class="table__tr">
+                    <td class="table__cell--language">German</td>
+                    <td class="table__cell">Beginner</td>
+                    <td class="table__cell">Beginner</td>
+                    <td class="table__cell">Beginner</td>
+                </tr>
+            </tbody>
+        </table>
+    </section>
+</article>
