Added button type + cat images (currently wrong sizes)

--- a/src/index.html
+++ b/src/index.html
@@ -45,10 +45,10 @@
                 </header>
 
                 <picture class="cat-section__picture">
-                    <source srcset="img/cats-max768.jpg 1x, img/cats-max768@2x.jpg 2x" media="(max-width: 768px)">
-                    <source srcset="img/cats-max1024.jpg 1x, img/cats-max1024@2x.jpg 2x" media="(max-width: 1024px)">
-                    <source srcset="img/cats-min1024.jpg 1x, img/cats-min1024@2x.jpg 2x" media="(min-width: 1024px)">
-                    <img src="img/cats-base.jpg" alt="Cats.">
+                    <source srcset="img/cat-max768.jpg 1x, img/cat-max768@2x.jpg 2x" media="(max-width: 768px)">
+                    <source srcset="img/cat-max1024.jpg 1x, img/cat-max1024@2x.jpg 2x" media="(max-width: 1024px)">
+                    <source srcset="img/cat-min1024.jpg 1x, img/cat-min1024@2x.jpg 2x" media="(min-width: 1024px)">
+                    <img src="img/cat-base.jpg" alt="A cute cat.">
                 </picture>
             </section>
 
@@ -87,7 +87,7 @@
             </section>
         </article>
 
-        <button class="ajaxButton">Click me to load the second article by AJAX</button>
+        <button class="ajaxButton" type="button">Click me to load the second article by AJAX</button>
 
     </main>
 
@@ -95,7 +95,7 @@
         <header>
             <h2 class="aside__title">Useless sidebar</h2>
         </header>
-        <button class="apiButton">Secret button to a random API</button>
+        <button class="apiButton" type="button">Secret button to a random API</button>
     </aside>
 
     <footer class="footer">
