Added jQuery + index.js

--- a/src/index.html
+++ b/src/index.html
@@ -102,6 +102,12 @@
         <p>Roman Baran © 2017</p>
     </footer>
 
+    <!-- Scripts -->
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js" defer></script>
+    <script type="text/javascript" src="./js/index.js" defer></script>
+    <noscript>Sorry, your browser does not support JavaScript!</noscript>
+    <!-- ./Scripts -->
+
 </body>
 
 </html>
