Added data base 64 for lazyLoad

--- a/src/index.html
+++ b/src/index.html
@@ -45,10 +45,10 @@
                 </header>
 
                 <picture class="cat-section__picture">
-                    <source srcset="img/cat-max768.jpg 1x, img/cat-max768@2x.jpg 2x" media="(max-width: 768px)">
-                    <source srcset="img/cat-max1024.jpg 1x, img/cat-max1024@2x.jpg 2x" media="(max-width: 1024px)">
-                    <source srcset="img/cat-min1024.jpg 1x, img/cat-min1024@2x.jpg 2x" media="(min-width: 1024px)">
-                    <img src="img/cat-base.jpg" alt="A cute cat.">
+                    <source srcset="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-srcset="img/cat-max768.jpg 1x, img/cat-max768@2x.jpg 2x" media="(max-width: 768px)">
+                    <source srcset="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-srcset="img/cat-max1024.jpg 1x, img/cat-max1024@2x.jpg 2x" media="(max-width: 1024px)">
+                    <source srcset="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-srcset="img/cat-min1024.jpg 1x, img/cat-min1024@2x.jpg 2x" media="(min-width: 1024px)">
+                    <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-src="img/cat-base.jpg" alt="A cute cat.">
                 </picture>
             </section>
 
