--- a/src/index.html
+++ b/src/index.html
@@ -47,10 +47,10 @@
                 </header>
 
                 <picture class="cat-section__picture">
-                    <source srcset="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-srcset="img/cat-max768.jpg 1x, img/cat-max768@2x.jpg 2x" media="(max-width: 768px)">
-                    <source srcset="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-srcset="img/cat-max1024.jpg 1x, img/cat-max1024@2x.jpg 2x" media="(max-width: 1024px)">
-                    <source srcset="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-srcset="img/cat-min1024.jpg 1x, img/cat-min1024@2x.jpg 2x" media="(min-width: 1024px)">
-                    <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-src="img/cat-base.jpg" alt="A cute cat.">
+                    <source srcset="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512'%3E%3Cpath d='M224%20387.814V512L32 320l192-192v126.912C447.375 260.152 437.794 103.016 380.93 0 521.287 151.707 491.48 394.785 224 387.814z'/%3E%3C/svg%3E" data-srcset="img/cat-max768.jpg 1x, img/cat-max768@2x.jpg 2x" media="(max-width: 768px)">
+                    <source srcset="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512'%3E%3Cpath d='M224%20387.814V512L32 320l192-192v126.912C447.375 260.152 437.794 103.016 380.93 0 521.287 151.707 491.48 394.785 224 387.814z'/%3E%3C/svg%3E" data-srcset="img/cat-max1024.jpg 1x, img/cat-max1024@2x.jpg 2x" media="(max-width: 1024px)">
+                    <source srcset="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512'%3E%3Cpath d='M224%20387.814V512L32 320l192-192v126.912C447.375 260.152 437.794 103.016 380.93 0 521.287 151.707 491.48 394.785 224 387.814z'/%3E%3C/svg%3E" data-srcset="img/cat-min1024.jpg 1x, img/cat-min1024@2x.jpg 2x" media="(min-width: 1024px)">
+                    <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512'%3E%3Cpath d='M224%20387.814V512L32 320l192-192v126.912C447.375 260.152 437.794 103.016 380.93 0 521.287 151.707 491.48 394.785 224 387.814z'/%3E%3C/svg%3E" data-src="img/cat-base.jpg" alt="A cute cat.">
                 </picture>
             </section>
 
@@ -104,7 +104,6 @@
         <p>Roman Baran © 2017</p>
     </footer>
 
-    <!-- Scripts -->
     <script type="text/javascript">
         var cssLink = document.createElement('link');
         cssLink.rel = 'stylesheet';
@@ -115,7 +114,6 @@
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js" defer></script>
     <script type="text/javascript" src="./js/index.js" defer></script>
     <noscript>Sorry, your browser does not support JavaScript!</noscript>
-    <!-- ./Scripts -->
 
 </body>
 
