Added basic mobile header styles

--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
             <h1 class="header__title">Baran Roman</h1>
 
             <nav class="menu">
-                <ul>
+                <ul class="menu__tabs">
                     <li class="menu__tab">
                         <a href="#fakeLink1" class="menu__link">Fake Link 1</a>
                     </li>
