--- a/src/index.html
+++ b/src/index.html
@@ -10,12 +10,51 @@
     <meta name="language" content="English">
     <meta name="msthemecompatible" content="no">
 
+    <style>
+        .spinner {
+            width: 40px;
+            height: 40px;
+            background-color: #FFBB00;
+
+            position: absolute;
+            top: 0;
+            right: 0;
+            bottom: 0;
+            left: 0;
+            margin: auto;
+
+            -webkit-animation: rotateplane 1.2s infinite ease-in-out;
+            animation: rotateplane 1.2s infinite ease-in-out;
+        }
+
+        @-webkit-keyframes rotateplane {
+            0% { -webkit-transform: perspective(120px) }
+            50% { -webkit-transform: perspective(120px) rotateY(180deg) }
+            100% { -webkit-transform: perspective(120px) rotateY(180deg)  rotateX(180deg) }
+        }
+
+        @keyframes rotateplane {
+            0% { 
+                transform: perspective(120px) rotateX(0deg) rotateY(0deg);
+                -webkit-transform: perspective(120px) rotateX(0deg) rotateY(0deg) 
+            } 50% { 
+                transform: perspective(120px) rotateX(-180.1deg) rotateY(0deg);
+                -webkit-transform: perspective(120px) rotateX(-180.1deg) rotateY(0deg) 
+            } 100% { 
+                transform: perspective(120px) rotateX(-180deg) rotateY(-179.9deg);
+                -webkit-transform: perspective(120px) rotateX(-180deg) rotateY(-179.9deg);
+            }
+        }
+    </style>
+
     <noscript>
         <link rel="stylesheet" type="text/css" href="/css/index.css" />
     </noscript>
 </head>
 
 <body class="body">
+
+    <div class="spinner"></div>
 
     <a href="#main" class="skip skip--hidden">Skip to main content.</a>
 
