--- a/src/index.html
+++ b/src/index.html
@@ -63,9 +63,9 @@
 
     <noscript>
         <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:400,400i,700,700i" />
-        <link rel="stylesheet" type="text/css" href="./css/index.css" />
+        <link rel="stylesheet" type="text/css" href="./index.css" />
         <style>
-            .container.container--hidden {
+            .container--hidden {
                 opacity: 1;
             }
             .spinner {
