Removed flash after preloader

--- a/src/index.html
+++ b/src/index.html
@@ -81,7 +81,7 @@
 
     <a href="#main" class="skip skip--hidden">Skip to main content.</a>
 
-    <div class="container--hidden">
+    <div class="container container--hidden">
 
         <header class="header">
             <h1 class="header__title">Baran Roman</h1>
