Clean api.js + Changed class index.html

--- a/src/index.html
+++ b/src/index.html
@@ -177,7 +177,7 @@
             <header>
                 <h2 class="aside__title">Useless sidebar</h2>
             </header>
-            <section class="aside__cities"></section>
+            <section class="aside__meetups"></section>
             <button class="apiButton" type="button">Secret button to a random API</button>
         </aside>
 
