--- a/src/index.html
+++ b/src/index.html
@@ -169,7 +169,7 @@
                 </section>
             </article>
 
-            <button class="ajaxButton" type="button">Click me to load the second article by AJAX</button>
+            <button class="ajaxButton" type="button">Click me to load one more (same) article by AJAX</button>
 
         </main>
 
