--- a/src/index.html
+++ b/src/index.html
@@ -178,7 +178,7 @@
                 <h2 class="aside__title">Useless sidebar</h2>
             </header>
             <section class="aside__meetups"></section>
-            <button class="apiButton" type="button">Secret button to a random API</button>
+            <button class="apiButton" type="button">Secret button to an API</button>
         </aside>
 
         <footer class="footer">
